# 3d-labirynt

./: CMakeLists.txt  ClosestPointTriangle.hpp  README.md  camera.hpp  main.cpp  objects.hpp
common/: shader.cpp
shaders/: background.fs  background.vs  obstacle.fs  player.fs  player.vs
